launcher_and_login

--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -1,30 +1,86 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt"
-    android:width="108dp"
-    android:height="108dp"
-    android:viewportWidth="108"
-    android:viewportHeight="108">
-    <path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="85.84757"
-                android:endY="92.4963"
-                android:startX="42.9492"
-                android:startY="49.59793"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
-    </path>
-    <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+    android:width="100dp"
+    android:height="100dp"
+    android:viewportWidth="150"
+    android:viewportHeight="120">
+
+    <group
+        android:translateX="10"
+        android:translateY="50"
+        android:scaleX="0.4"
+        android:scaleY="0.4">
+        <path
+            android:fillColor="@color/blue_400"
+            android:pathData="M6.48 102.4C5.30667 102.4 4.34667 102.16 3.6 101.68C2.85333 101.2 2.24 100.587 1.76 99.84C1.22667 98.9333 0.853334 98 0.64 97.04C0.48 96.0267 0.4 95.2 0.4 94.56C0.4 91.9467 1.06667 89.5733 2.4 87.44C3.73333 85.3067 5.81333 83.5733 8.64 82.24L9.36 83.68C7.70667 84.3733 6.26667 85.4667 5.04 86.96C3.86667 88.4533 3.28 89.9733 3.28 91.52C3.28 92.16 3.36 92.72 3.52 93.2C4.37333 92.5067 5.36 92.16 6.48 92.16C7.86667 92.16 9.06667 92.6133 10.08 93.52C11.0933 94.4267 11.6 95.68 11.6 97.28C11.6 98.7733 11.0933 100 10.08 100.96C9.06667 101.92 7.86667 102.4 6.48 102.4ZM20.08 102.4C18.9067 102.4 17.9467 102.16 17.2 101.68C16.4533 101.2 15.84 100.587 15.36 99.84C14.8267 98.9333 14.4533 98 14.24 97.04C14.08 96.0267 14 95.2 14 94.56C14 91.9467 14.6667 89.5733 16 87.44C17.3333 85.3067 19.4133 83.5733 22.24 82.24L22.96 83.68C21.3067 84.3733 19.8667 85.4667 18.64 86.96C17.4667 88.4533 16.88 89.9733 16.88 91.52C16.88 92.16 16.96 92.72 17.12 93.2C17.9733 92.5067 18.96 92.16 20.08 92.16C21.4667 92.16 22.6667 92.6133 23.68 93.52C24.6933 94.4267 25.2 95.68 25.2 97.28C25.2 98.7733 24.6933 100 23.68 100.96C22.6667 101.92 21.4667 102.4 20.08 102.4Z" />
+    </group>
+    <group
+        android:translateX="20"
+        android:translateY="50"
+        android:scaleX="0.020000"
+        android:scaleY="-0.015000">
+        <path
+            android:fillColor="@color/black"
+            android:strokeWidth="1"
+            android:pathData="M5665 1346 c-72 -31 -115 -122 -94 -198 32 -122 180 -162 273 -75 131 124 -14 345 -179 273z m131 -15 c146 -66 95 -291 -66 -291 -161 0 -211 218 -67 289 51 26 80 26 133 2z" />
+        <path
+            android:fillColor="@color/black"
+            android:strokeWidth="1"
+            android:pathData="M5660 1195 c0 -85 16 -119 22 -47 4 50 35 55 71 13 14 -17 27 -36 29 -42 2 -7 9 -10 16 -8 8 3 4 16 -13 41 -25 37 -25 37 -5 48 22 12 27 49 8 68 -7 7 -38 12 -70 12 l-58 0 0 -85z m114 52 c15 -24 -18 -49 -59 -45 -26 3 -30 7 -33 36 l-3 33 42 -3 c27 -2 46 -9 53 -21z" />
+        <path
+            android:fillColor="@color/blue_400"
+            android:strokeWidth="1"
+            android:pathData="M4190 1345 c0 -21 -52 -401 -56 -404 -2 -2 -13 8 -25 23 -35 44 -105 86 -174 103 -81 20 -166 8 -260 -35 -132 -62 -229 -192 -250 -335 l-7 -47 55 0 55 0 11 50 c22 103 80 181 173 231 57 31 71 34 143 34 62 0 89 -5 120 -22 92 -49 134 -119 135 -225 l0 -68 53 0 52 0 38 293 c21 160 41 318 44 350 l6 57 -57 0 c-31 0 -56 -2 -56 -5z" />
+        <path
+            android:fillColor="@color/blue_400"
+            android:strokeWidth="1"
+            android:pathData="M4496 1318 c-3 -18 -23 -166 -46 -328 -22 -162 -42 -305 -44 -317 -3 -22 0 -23 55 -23 56 0 59 1 59 24 0 23 20 175 70 529 11 76 20 140 20 142 0 3 -24 5 -54 5 -53 0 -54 -1 -60 -32z" />
+        <path
+            android:fillColor="@color/blue_400"
+            android:strokeWidth="1"
+            android:pathData="M4999 1076 c-167 -47 -292 -193 -324 -378 l-6 -38 397 0 397 0 -5 90 c-5 77 -11 101 -39 158 -41 80 -113 143 -191 167 -61 18 -165 18 -229 1z m192 -108 c75 -22 136 -92 154 -175 l7 -33 -272 0 -271 0 7 23 c11 36 62 104 99 132 75 58 188 80 276 53z" />
+        <path
+            android:fillColor="@color/blue_400"
+            android:strokeWidth="1"
+            android:pathData="M285 1073 c-121 -26 -188 -101 -187 -210 0 -68 26 -109 103 -168 l58 -46 89 3 89 3 -106 81 c-116 87 -135 112 -120 153 37 97 153 104 228 14 l29 -35 32 47 c31 45 32 47 13 68 -28 33 -55 55 -88 71 -32 16 -107 26 -140 19z" />
+        <path
+            android:fillColor="@color/blue_400"
+            android:strokeWidth="1"
+            android:pathData="M1010 1065 c-50 -15 -100 -40 -159 -82 l-24 -18 5 48 6 47 -54 0 c-29 0 -55 -3 -57 -8 -4 -6 -16 -87 -53 -359 l-6 -43 54 0 55 0 6 51 c11 93 85 192 175 236 49 24 69 28 142 28 75 0 91 -3 133 -28 85 -50 137 -154 124 -248 l-5 -39 59 0 59 0 0 53 c-1 164 -83 297 -217 347 -74 28 -175 34 -243 15z" />
+        <path
+            android:fillColor="@color/blue_400"
+            android:strokeWidth="1"
+            android:pathData="M1911 1060 c-137 -36 -224 -107 -284 -231 -20 -41 -40 -98 -45 -126 l-9 -53 395 0 395 0 -6 83 c-8 120 -29 171 -102 244 -52 51 -72 64 -129 82 -83 26 -119 26 -215 1z m210 -121 c50 -25 105 -91 117 -141 6 -23 9 -45 6 -50 -3 -4 -124 -8 -270 -8 -213 0 -264 3 -264 13 0 21 58 103 92 132 95 80 224 102 319 54z" />
+        <path
+            android:fillColor="@color/blue_400"
+            android:strokeWidth="1"
+            android:pathData="M2849 1056 c-76 -21 -167 -76 -215 -130 -67 -73 -98 -141 -118 -253 l-5 -33 389 0 389 0 7 37 c9 48 -11 154 -41 212 -23 46 -78 104 -126 133 -71 44 -190 58 -280 34z m159 -107 c88 -18 160 -93 169 -173 l5 -41 -266 0 c-146 0 -266 4 -266 8 0 38 89 145 144 174 78 41 135 49 214 32z" />
+        <path
+            android:fillColor="@color/blue_400"
+            android:strokeWidth="1"
+            android:pathData="M377 531 c14 -37 14 -42 -3 -78 -23 -46 -76 -83 -118 -83 -39 0 -100 30 -149 72 l-37 32 -30 -35 c-16 -19 -29 -39 -30 -45 0 -15 70 -78 107 -97 91 -47 189 -45 274 6 81 48 121 139 103 232 l-6 35 -63 0 -63 0 15 -39z" />
+        <path
+            android:fillColor="@color/blue_400"
+            android:strokeWidth="1"
+            android:pathData="M660 568 c-19 -119 -74 -558 -70 -558 31 -3 110 -5 110 -2 0 15 51 386 53 389 2 1 26 -19 55 -47 39 -38 66 -53 117 -69 76 -24 112 -26 187 -10 129 27 241 112 302 229 l37 70 -59 0 -59 0 -33 -51 c-129 -199 -423 -197 -506 4 l-19 47 -57 0 c-32 0 -58 -1 -58 -2z" />
+        <path
+            android:fillColor="@color/blue_400"
+            android:strokeWidth="1"
+            android:pathData="M1594 538 c19 -96 89 -194 167 -233 150 -76 347 -46 480 72 l51 47 -43 37 -43 36 -38 -37 c-63 -63 -119 -85 -218 -85 -68 0 -93 5 -126 22 -46 24 -97 87 -115 140 -10 32 -12 33 -66 33 l-55 0 6 -32z" />
+        <path
+            android:fillColor="@color/blue_400"
+            android:strokeWidth="1"
+            android:pathData="M2517 518 c46 -157 148 -238 318 -255 108 -10 244 39 332 120 l44 41 -38 33 c-21 18 -43 32 -49 33 -5 0 -23 -14 -40 -31 -68 -72 -201 -106 -301 -78 -60 16 -133 86 -152 147 l-14 42 -58 0 -58 0 16 -52z" />
+        <path
+            android:fillColor="@color/blue_400"
+            android:strokeWidth="1"
+            android:pathData="M3420 567 c0 -2 7 -27 16 -57 42 -143 157 -232 320 -247 75 -7 179 21 240 65 70 50 68 50 62 -2 l-6 -47 57 3 56 3 16 110 c10 61 17 125 18 143 l1 32 -54 0 -53 0 -37 -55 c-67 -102 -166 -151 -285 -143 -110 8 -195 69 -222 158 l-12 40 -59 0 c-32 0 -58 -1 -58 -3z" />
+        <path
+            android:fillColor="@color/blue_400"
+            android:strokeWidth="1"
+            android:pathData="M4390 560 c0 -11 -26 -194 -35 -248 l-6 -33 58 3 57 3 18 125 c24 175 27 160 -37 160 -30 0 -55 -5 -55 -10z" />
+        <path
+            android:fillColor="@color/blue_400"
+            android:strokeWidth="1"
+            android:pathData="M4674 543 c15 -60 66 -153 106 -192 133 -129 389 -116 553 30 l49 42 -39 33 c-21 18 -42 33 -47 34 -5 0 -26 -16 -47 -35 -56 -50 -115 -77 -184 -83 -125 -10 -217 43 -265 151 l-21 47 -56 0 c-55 0 -55 0 -49 -27z" />
+    </group>
 </vector>
