--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,7 +2,30 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
-    <dimen name="nav_header_vertical_spacing">8dp</dimen>
-    <dimen name="nav_header_height">176dp</dimen>
+
+    <dimen name="textSize_100">13sp</dimen>
+    <dimen name="textSize_200">15sp</dimen>
+    <dimen name="textSize_300">18sp</dimen>
+    <dimen name="textSize_400">24sp</dimen>
+    <dimen name="textSize_500">30sp</dimen>
+    <dimen name="textSize_600">35sp</dimen>
+    <dimen name="textSize_700">40sp</dimen>
+
+    <dimen name="input_legend">2</dimen>
+
+    <dimen name="nav_title_vertical_padding">8dp</dimen>
+    <dimen name="nav_title_horizontal_padding">12dp</dimen>
+
+    <dimen name="nav_text_size">20sp</dimen>
+    
+    <dimen name="editText_height">40dp</dimen>
+    <dimen name="editText_paddingHorizontal">13dp</dimen>
+    <dimen name="editText_paddingBottom">3dp</dimen>
+    
+    <dimen name="flag_width">40dp</dimen>
+    <dimen name="flag_height">33.33333dp</dimen>
+
     <dimen name="fab_margin">16dp</dimen>
+
+    <dimen name="font_weight_200"></dimen>
 </resources>
