--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -29,6 +29,9 @@
         android:layout_gravity="bottom|end"
         android:layout_marginEnd="@dimen/fab_margin"
         android:layout_marginBottom="16dp"
-        app:srcCompat="@android:drawable/ic_dialog_email" />
+        android:backgroundTint="@color/blue_400"
+        app:backgroundTint="@color/white"
+        app:iconTint="@color/white"
+        app:srcCompat="@drawable/ic_notification" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
