--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -9,15 +9,16 @@
 
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="75dp"
+        android:layout_height="55dp"
         android:layout_gravity="top"
         android:background="@color/white">
 
         <AdapterViewFlipper
-            android:layout_width="70dp"
-            android:layout_height="70dp"
-            android:layout_margin="2.5dp"
-            android:background="@drawable/chevron_left" />
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginVertical="2.5dp"
+            android:layout_marginHorizontal="5dp"
+            android:background="@drawable/ic_chevron_left" />
     </FrameLayout>
 
 </LinearLayout>
