--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
+     <color name="purple_200">#FFBB86FC</color>
+    <color name="purple_700">#FF3700B3</color>
+    <color name="teal_200">#FF03DAC5</color>
+
     <color name="blue_100">#FFF3F3F9</color>
-    <color name="blue_200">#5DB0E0</color>
+    <color name="blue_101">#FFD9D9E9</color>
+    <color name="blue_200">#FF5DB0E0</color>
     <color name="blue_300">#FF206E9C</color>
     <color name="blue_400">#FF2F5596</color>
     <color name="blue_500">#FF405189</color>
@@ -14,9 +20,11 @@
     <color name="red_100">#FFF06548</color>
     <color name="red">#FFFF4B55</color>
 
-    <color name="black">#FF000000</color>
-    <color name="grey_100">#FFCED4DA</color>
-    <color name="grey_300">#FF4E5665</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="grey_100">#FFECEDF3</color>
+    <color name="grey_200">#FFCED4DA</color>
+    <color name="grey_300">#FF4E5665</color>
+    <color name="grey_400">#FF444444</color>
+    <color name="black">#FF000000</color>
 
 </resources>
