--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,8 +2,10 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="activity_horizontal_padding">16dp</dimen>
+    <dimen name="activity_vertical_padding">50dp</dimen>
 
-    <dimen name="textSize_100">13sp</dimen>
+    <dimen name="textSize_100">12sp</dimen>
     <dimen name="textSize_200">15sp</dimen>
     <dimen name="textSize_300">18sp</dimen>
     <dimen name="textSize_400">24sp</dimen>
@@ -18,14 +20,17 @@
 
     <dimen name="nav_text_size">20sp</dimen>
     
-    <dimen name="editText_height">40dp</dimen>
+    <dimen name="editText_height">48dp</dimen>
     <dimen name="editText_paddingHorizontal">13dp</dimen>
     <dimen name="editText_paddingBottom">3dp</dimen>
     
-    <dimen name="flag_width">40dp</dimen>
-    <dimen name="flag_height">33.33333dp</dimen>
+    <dimen name="flag_width">50dp</dimen>
+    <dimen name="flag_height">40dp</dimen>
 
     <dimen name="fab_margin">16dp</dimen>
 
-    <dimen name="font_weight_200"></dimen>
+    <dimen name="dashboard_icon_padding">5dp</dimen>
+    <dimen name="card_horizontal_padding">16dp</dimen>
+    <dimen name="card_vertical_padding">16dp</dimen>
+    <dimen name="card_vertical_margin">30dp</dimen>
 </resources>
