--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -21,4 +21,8 @@
         <item>Multi package</item>
         <item>\> 30kg</item>
     </string-array>
+    <string-array name="user_type">
+        <item>@string/individual</item>
+        <item>@string/professional</item>
+    </string-array>
 </resources>
