--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,8 +5,11 @@
         <item name="android:layout_width">0dp</item>
         <item name="android:layout_height">40dp</item>
         <item name="android:paddingLeft">10dp</item>
+        <item name="android:paddingRight">10dp</item>
         <item name="android:background">@drawable/bg_edit_text_border</item>
         <item name="android:layout_weight">1</item>
+        <item name="android:textColorHint">@color/grey_200</item>
+        <item name="android:textColor">@color/blue_400</item>
     </style>
     <style name="subtitleTextViewStyle" parent="Widget.AppCompat.TextView">
         <item name="android:layout_width">match_parent</item>
@@ -87,14 +90,14 @@
     </style>
 
 
-    <!-- Spinner -->
+    <!-- spinner -->
     <style name="spinnerStyle.Theme" parent="@android:style/Theme.Light">
-        <item name="android:spinnerStyle">@style/spinnerStyle</item>
+        <item name="android:spinnerStyle">@style/spinnerStyleClickable</item>
         <item name="android:spinnerItemStyle">@style/SpinnerItem</item>
         <item name="android:spinnerDropDownItemStyle">@style/SpinnerDropDownItem</item>
         <item name="android:background">@drawable/bg_spinner</item>
     </style>
-    <style name="spinnerStyle">
+    <style name="spinnerStyleClickable">
         <item name="android:clickable">true</item>
     </style>
     <style name="SpinnerItem">
@@ -104,5 +107,29 @@
     <style name="SpinnerDropDownItem">
         <item name="android:textColor">@color/black</item>
         <item name="android:background">@color/white</item>
+    </style>
+    <style name="spinnerStyle" parent="Widget.AppCompat.Spinner">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">40dp</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:background">@drawable/bg_edit_text_border</item>
+    </style>
+
+    <!-- row text -->
+    <style name="tableTextViewStyle.Header" parent="Widget.AppCompat.TextView">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textStyle">italic</item>
+        <item name="android:textColor">@color/grey_300</item>
+        <item name="android:textAlignment">textEnd</item>
+        <item name="android:background">@drawable/bg_address_table_column</item>
+        <item name="android:paddingEnd">5dp</item>
+    </style>
+    <style name="tableTextViewStyle" parent="Widget.AppCompat.TextView">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textColor">@color/grey_300</item>
+        <item name="android:paddingLeft">5dp</item>
     </style>
 </resources>
